fixed buttons width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -90,14 +90,14 @@ body {
 }
 
 .button-container {
-  width: 80%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
   button {
-    width: 80%;
+    width: 90%;
     height: 50px;
     margin: 10px;
     border: none;
